Add user location feature with popup information and back button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="controls">
       <button id="set-source" class="btn">Show Layer</button>
       <button id="unset-source" class="btn btn-danger">Hide Layer</button>
+      <button id="back-to-location" class="btn btn-success">Back to My Location</button>
     </div>
   </main>
   <footer>
