Implement location information retrieval and popup display on map interaction

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <h1>Interactive Map</h1>
-    <p>Control the map layer visibility with the buttons below</p>
+    <!-- <p>Control the map layer visibility with the buttons below</p> -->
   </header>
   <main>
     <div id="map"></div>
